# CMakeBasics

./: CMakeLists.txt  Car.cpp  Car.h  FindOne.cmake  Person.cpp  Person.h  find.cmake  main.cpp  one.cmake  prop.cmake  varable.cmake
Stkxxx/: StkxxxConfig.cmake
lib/: dd.cpp
two/: CMakeLists.txt
